fix issue on variant table not responsive

--- a/public/css/a-style.css
+++ b/public/css/a-style.css
@@ -1400,7 +1400,7 @@ textarea {
 }
 @media ( max-width: 320px ) {
 	.melis-product-heading > a.btn-success {
-		float: left;
+		/* float: left; */
 		margin: 0;
 	}
 }
