--- a/public/css/commerce-style.css
+++ b/public/css/commerce-style.css
@@ -2159,7 +2159,7 @@ textarea {
 }
 @media ( max-width: 320px ) {
     .melis-product-heading > a.btn-success {
-        float: left;
+        /* float: left; */
         margin: 0;
     }
 }
